ICE-2881: prevent overflow in Opera

--- a/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
+++ b/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
@@ -251,9 +251,8 @@ a.docViewNodeSelectedtrue{
 }
 
 .columnsContainer {
-    height: 225px;
+    height: 250px;
     width: 100%;
-    overflow-y:scroll;
     border: 1px solid #dedede;
 }
 
